Lang/gen/ExamGrammarParser.java
// Generated from C:/Users/Andre/Desktop/ARQSOFT/LAPRIV-2022-2023/Lang/langs/exam\ExamGrammar.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExamGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, HEADER_TYPE=13, COLLUMN=14, COMA=15, EXAM=16, 
		PROMPT=17, POOLS=18, NAME=19, QUESTIONS=20, BODY=21, CODE=22, AWNSERS=23, 
		DIFFICULTY=24, OPTIONS=25, VALID=26, IID=27, AWNSER=28, TEXT=29, KEYS=30, 
		ID=31, TITLE=32, HEADER=33, GRADING=34, DESCRIPTION=35, FEEDBACK=36, SECTIONS=37, 
		LIMIT_QUESTION=38, POOL=39, REAL=40, INT=41, STRING=42, COMMENT=43, WS=44;
	public static final int
		RULE_start = 0, RULE_pools = 1, RULE_pools_body = 2, RULE_pool = 3, RULE_questions = 4, 
		RULE_questions_body = 5, RULE_question_body = 6, RULE_body = 7, RULE_true_false = 8, 
		RULE_missing_words = 9, RULE_key_map = 10, RULE_numerical = 11, RULE_short_awnser = 12, 
		RULE_multiple_choice = 13, RULE_multiple_choice_options = 14, RULE_multiple_choice_options_body = 15, 
		RULE_matching = 16, RULE_matching_awnsers = 17, RULE_matching_token = 18, 
		RULE_matching_questions = 19, RULE_true_false_option = 20, RULE_exam = 21, 
		RULE_exam_body = 22, RULE_sections = 23, RULE_sections_body = 24, RULE_section_object = 25, 
		RULE_header = 26, RULE_header_body = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "pools", "pools_body", "pool", "questions", "questions_body", 
			"question_body", "body", "true_false", "missing_words", "key_map", "numerical", 
			"short_awnser", "multiple_choice", "multiple_choice_options", "multiple_choice_options_body", 
			"matching", "matching_awnsers", "matching_token", "matching_questions", 
			"true_false_option", "exam", "exam_body", "sections", "sections_body", 
			"section_object", "header", "header_body"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'{'", "'}'", "'true-false'", "'missing-words'", 
			"'numerical'", "'short-awnser'", "'multiple-choice'", "'matching'", "'true'", 
			"'false'", null, "':'", "','", "'exam'", "'prompt'", "'pools'", "'name'", 
			"'questions'", "'body'", "'code'", "'awnsers'", "'difficulty'", "'options'", 
			"'valid'", "'iid'", "'awnser'", "'text'", "'keys'", "'id'", "'title'", 
			"'header'", "'grading'", "'description'", "'feedback'", "'sections'", 
			"'limitQuestion'", "'pool'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "HEADER_TYPE", "COLLUMN", "COMA", "EXAM", "PROMPT", "POOLS", "NAME", 
			"QUESTIONS", "BODY", "CODE", "AWNSERS", "DIFFICULTY", "OPTIONS", "VALID", 
			"IID", "AWNSER", "TEXT", "KEYS", "ID", "TITLE", "HEADER", "GRADING", 
			"DESCRIPTION", "FEEDBACK", "SECTIONS", "LIMIT_QUESTION", "POOL", "REAL", 
			"INT", "STRING", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExamGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExamGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public PoolsContext pools() {
			return getRuleContext(PoolsContext.class,0);
		}
		public ExamContext exam() {
			return getRuleContext(ExamContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case POOLS:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				pools();
				setState(57);
				exam();
				}
				break;
			case EXAM:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				exam();
				setState(60);
				pools();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PoolsContext extends ParserRuleContext {
		public TerminalNode POOLS() { return getToken(ExamGrammarParser.POOLS, 0); }
		public TerminalNode COLLUMN() { return getToken(ExamGrammarParser.COLLUMN, 0); }
		public Pools_bodyContext pools_body() {
			return getRuleContext(Pools_bodyContext.class,0);
		}
		public PoolsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pools; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterPools(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitPools(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitPools(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoolsContext pools() throws RecognitionException {
		PoolsContext _localctx = new PoolsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pools);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(POOLS);
			setState(65);
			match(COLLUMN);
			setState(66);
			match(T__0);
			setState(67);
			pools_body();
			setState(68);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pools_bodyContext extends ParserRuleContext {
		public PoolContext pool() {
			return getRuleContext(PoolContext.class,0);
		}
		public TerminalNode COMA() { return getToken(ExamGrammarParser.COMA, 0); }
		public Pools_bodyContext pools_body() {
			return getRuleContext(Pools_bodyContext.class,0);
		}
		public Pools_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pools_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterPools_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitPools_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitPools_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pools_bodyContext pools_body() throws RecognitionException {
		Pools_bodyContext _localctx = new Pools_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pools_body);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				pool();
				setState(71);
				match(COMA);
				setState(72);
				pools_body();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				pool();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PoolContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(ExamGrammarParser.NAME, 0); }
		public List<TerminalNode> COLLUMN() { return getTokens(ExamGrammarParser.COLLUMN); }
		public TerminalNode COLLUMN(int i) {
			return getToken(ExamGrammarParser.COLLUMN, i);
		}
		public TerminalNode STRING() { return getToken(ExamGrammarParser.STRING, 0); }
		public TerminalNode COMA() { return getToken(ExamGrammarParser.COMA, 0); }
		public TerminalNode QUESTIONS() { return getToken(ExamGrammarParser.QUESTIONS, 0); }
		public QuestionsContext questions() {
			return getRuleContext(QuestionsContext.class,0);
		}
		public PoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterPool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitPool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitPool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoolContext pool() throws RecognitionException {
		PoolContext _localctx = new PoolContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pool);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__2);
			setState(78);
			match(NAME);
			setState(79);
			match(COLLUMN);
			setState(80);
			match(STRING);
			setState(81);
			match(COMA);
			setState(82);
			match(QUESTIONS);
			setState(83);
			match(COLLUMN);
			setState(84);
			questions();
			setState(85);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionsContext extends ParserRuleContext {
		public Questions_bodyContext questions_body() {
			return getRuleContext(Questions_bodyContext.class,0);
		}
		public QuestionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterQuestions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitQuestions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitQuestions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionsContext questions() throws RecognitionException {
		QuestionsContext _localctx = new QuestionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_questions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__0);
			setState(88);
			questions_body();
			setState(89);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Questions_bodyContext extends ParserRuleContext {
		public Question_bodyContext question_body() {
			return getRuleContext(Question_bodyContext.class,0);
		}
		public TerminalNode COMA() { return getToken(ExamGrammarParser.COMA, 0); }
		public Questions_bodyContext questions_body() {
			return getRuleContext(Questions_bodyContext.class,0);
		}
		public Questions_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterQuestions_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitQuestions_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitQuestions_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Questions_bodyContext questions_body() throws RecognitionException {
		Questions_bodyContext _localctx = new Questions_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_questions_body);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				question_body();
				setState(92);
				match(COMA);
				setState(93);
				questions_body();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				question_body();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_bodyContext extends ParserRuleContext {
		public Token prompt_string;
		public TerminalNode PROMPT() { return getToken(ExamGrammarParser.PROMPT, 0); }
		public List<TerminalNode> COLLUMN() { return getTokens(ExamGrammarParser.COLLUMN); }
		public TerminalNode COLLUMN(int i) {
			return getToken(ExamGrammarParser.COLLUMN, i);
		}
		public List<TerminalNode> COMA() { return getTokens(ExamGrammarParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(ExamGrammarParser.COMA, i);
		}
		public TerminalNode BODY() { return getToken(ExamGrammarParser.BODY, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode DIFFICULTY() { return getToken(ExamGrammarParser.DIFFICULTY, 0); }
		public TerminalNode INT() { return getToken(ExamGrammarParser.INT, 0); }
		public TerminalNode STRING() { return getToken(ExamGrammarParser.STRING, 0); }
		public Question_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterQuestion_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitQuestion_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitQuestion_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_bodyContext question_body() throws RecognitionException {
		Question_bodyContext _localctx = new Question_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_question_body);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__2);
			setState(99);
			match(PROMPT);
			setState(100);
			match(COLLUMN);
			setState(101);
			((Question_bodyContext)_localctx).prompt_string = match(STRING);
			setState(102);
			match(COMA);
			setState(103);
			match(BODY);
			setState(104);
			match(COLLUMN);
			setState(105);
			match(T__2);
			setState(106);
			body();
			setState(107);
			match(T__3);
			setState(108);
			match(COMA);
			setState(109);
			match(DIFFICULTY);
			setState(110);
			match(COLLUMN);
			setState(111);
			match(INT);
			setState(112);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public MatchingContext matching() {
			return getRuleContext(MatchingContext.class,0);
		}
		public Multiple_choiceContext multiple_choice() {
			return getRuleContext(Multiple_choiceContext.class,0);
		}
		public Short_awnserContext short_awnser() {
			return getRuleContext(Short_awnserContext.class,0);
		}
		public NumericalContext numerical() {
			return getRuleContext(NumericalContext.class,0);
		}
		public Missing_wordsContext missing_words() {
			return getRuleContext(Missing_wordsContext.class,0);
		}
		public True_falseContext true_false() {
			return getRuleContext(True_falseContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_body);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				matching();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				multiple_choice();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				short_awnser();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				numerical();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(118);
				missing_words();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(119);
				true_false();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class True_falseContext extends ParserRuleContext {
		public TerminalNode CODE() { return getToken(ExamGrammarParser.CODE, 0); }
		public List<TerminalNode> COLLUMN() { return getTokens(ExamGrammarParser.COLLUMN); }
		public TerminalNode COLLUMN(int i) {
			return getToken(ExamGrammarParser.COLLUMN, i);
		}
		public TerminalNode COMA() { return getToken(ExamGrammarParser.COMA, 0); }
		public TerminalNode AWNSER() { return getToken(ExamGrammarParser.AWNSER, 0); }
		public True_false_optionContext true_false_option() {
			return getRuleContext(True_false_optionContext.class,0);
		}
		public True_falseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_true_false; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterTrue_false(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitTrue_false(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitTrue_false(this);
			else return visitor.visitChildren(this);
		}
	}

	public final True_falseContext true_false() throws RecognitionException {
		True_falseContext _localctx = new True_falseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_true_false);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(CODE);
			setState(123);
			match(COLLUMN);
			setState(124);
			match(T__4);
			setState(125);
			match(COMA);
			setState(126);
			match(AWNSER);
			setState(127);
			match(COLLUMN);
			setState(128);
			true_false_option();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Missing_wordsContext extends ParserRuleContext {
		public Token text_string;
		public TerminalNode CODE() { return getToken(ExamGrammarParser.CODE, 0); }
		public List<TerminalNode> COLLUMN() { return getTokens(ExamGrammarParser.COLLUMN); }
		public TerminalNode COLLUMN(int i) {
			return getToken(ExamGrammarParser.COLLUMN, i);
		}
		public List<TerminalNode> COMA() { return getTokens(ExamGrammarParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(ExamGrammarParser.COMA, i);
		}
		public TerminalNode TEXT() { return getToken(ExamGrammarParser.TEXT, 0); }
		public TerminalNode KEYS() { return getToken(ExamGrammarParser.KEYS, 0); }
		public Key_mapContext key_map() {
			return getRuleContext(Key_mapContext.class,0);
		}
		public TerminalNode STRING() { return getToken(ExamGrammarParser.STRING, 0); }
		public Missing_wordsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_missing_words; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterMissing_words(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitMissing_words(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitMissing_words(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Missing_wordsContext missing_words() throws RecognitionException {
		Missing_wordsContext _localctx = new Missing_wordsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_missing_words);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(CODE);
			setState(131);
			match(COLLUMN);
			setState(132);
			match(T__5);
			setState(133);
			match(COMA);
			setState(134);
			match(TEXT);
			setState(135);
			match(COLLUMN);
			setState(136);
			((Missing_wordsContext)_localctx).text_string = match(STRING);
			setState(137);
			match(COMA);
			setState(138);
			match(KEYS);
			setState(139);
			match(COLLUMN);
			setState(140);
			match(T__2);
			setState(141);
			key_map();
			setState(142);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Key_mapContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ExamGrammarParser.INT, 0); }
		public TerminalNode COLLUMN() { return getToken(ExamGrammarParser.COLLUMN, 0); }
		public TerminalNode STRING() { return getToken(ExamGrammarParser.STRING, 0); }
		public TerminalNode COMA() { return getToken(ExamGrammarParser.COMA, 0); }
		public Key_mapContext key_map() {
			return getRuleContext(Key_mapContext.class,0);
		}
		public Key_mapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterKey_map(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitKey_map(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitKey_map(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Key_mapContext key_map() throws RecognitionException {
		Key_mapContext _localctx = new Key_mapContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_key_map);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				match(INT);
				setState(145);
				match(COLLUMN);
				setState(146);
				match(STRING);
				setState(147);
				match(COMA);
				setState(148);
				key_map();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				match(INT);
				setState(150);
				match(COLLUMN);
				setState(151);
				match(STRING);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
